@@ -7,6 +7,7 @@
 
 3.12
  * Add support for arithmetic operators (CASSANDRA-11935)
+ * cqlsh auto completion: refactor definition of compaction strategy options (CASSANDRA-12946)
 
 3.11
  * Fix inconsistencies in cassandra-stress load balancing policy (CASSANDRA-12919)
